# Djangorest-Mobile_Backend

./: .gitignore  README.md  pyproject.toml
app/authentication/: serializers.py  urls.py  utils.py  views.py
app/organizations/: apps.py  models.py  serializers.py  urls.py  views.py
app/organizations/migrations/: 0001_initial.py  0002_organizationinvite.py
app/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/products/migrations/: 0001_initial.py
app/tasks/: apps.py  models.py  serializers.py  urls.py  views.py
app/tasks/migrations/: 0001_initial.py  0002_alter_tasks_status_task.py
app/tasks_board/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/tasks_board/migrations/: 0001_initial.py
app/users/: admin.py  serializers.py  signals.py  urls.py  views.py
app/users/templates/: final_password.html  password_reset_confirm.html  password_reset_email.html  politics.html
mixins/: base_meta_str.py
settings/: env_config.py  settings.py  urls.py
utils/: exceptions.py
